Add compiler arg -proc:full for JDK 22 change