@@ -3,7 +3,7 @@
 
   <groupId>org.avaje</groupId>
   <artifactId>java11-oss</artifactId>
-  <version>3.10</version>
+  <version>3.11</version>
   <packaging>pom</packaging>
   <name>java11-oss</name>
 
@@ -57,7 +57,8 @@
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <release>${java.release}</release>
-          <compilerArgs>-Xlint:all</compilerArgs>
+          <compilerArgument>-Xlint:all</compilerArgument>
+          <compilerArgument>-proc:full</compilerArgument>
         </configuration>
       </plugin>
 
